Lab-05: Deploy your App on AKS: mdc-workflow-lab5.yaml

--- a/app/templates_folder/host.html
+++ b/app/templates_folder/host.html
@@ -4,5 +4,6 @@
       <h1>Mentoria Devops Cloud</h1>
       <h3>Container id:  {{ id_container }}</h3>
       <p>Application Version: V1</p>
+      <p>André Carlucci</p>
    </body>
 </html>
